# shub

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  todo.md
.github/workflows/: build.yml  check.yaml  check.yml  dependabot.yml
docs/: release-procedure.md
src/: app.rs  app2.rs  app_env.rs  cli.rs  database.rs  display.rs  github.rs  github_client.rs  github_client2.rs  github_models.rs  kceh.rs  lib.rs  main.rs  repo_id.rs  repository_id.rs  types.rs
src/commands/: dashboard.rs
src/github/: auth.rs  client.rs  error.rs  mod.rs  requests.rs  responses.rs
