[package]
name = "shub"
version = "0.2.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
argh = "0.1"
async-trait = "0.1"
base64 = "0.13"
dotenv = "0.15"
futures = "0.3"
indoc = "1"
http = "0.2"
lembaran = { version = "0.2", features = ["stream", "ext_http"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tabwriter = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = { version = "0.1", features = ["max_level_debug"] }
tracing-subscriber = "0.2"
url = "2"

[dev-dependencies]
assert_cmd = "2"
warp = { version = "0.3", default-features = false }
quickcheck = "1"
tempfile = "3"
