[package]
name = "shub"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "3", default-features = false, features = [
  "std",
  "derive",
  "cargo",
] }
dialoguer = "0.9"
futures = "0.3"
git2 = "0.13"
http = "0.2"
indoc = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
octocrab = { git = "https://github.com/XAMPPRocky/octocrab" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
tempfile = "3"
