[package]
name = "shub"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-stream = "0.3"
async-trait = "0.1"
bstr = "0.2"
bytes = "1.1"
chrono = "0.4"
clap = { version = "3.2", default-features = false, features = [
  "std",
  "derive",
  "cargo",
] }
console = "0.15"
dialoguer = "0.10"
futures = "0.3"
git2 = "0.14"
http = "=0.2.7"
octocrab = "0.16"
sekret = { git = "https://github.com/kafji/sekret", tag = "v0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1.2"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1.9"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.3"
